fix: revert test changes